CHANGES IN FLTK 1.1.7

	- Documentation fixes (STR #648, STR #692, STR #730, STR
	  #744, STR #745)
	- FLUID now supports printing of windows.
	- Fixed inactive drawing of border, embossed, and
	  engraved box types.
	- Added Fl_Spinner widget (another combination of
	  existing widgets in a header file)
	- FLUID now provides support for UI templates.
	- fl_not_clipped() incorrectly used the current window
	  dimensions for gross clipping, which interfered with
	  off-screen rendering.
	- Fl_Window::draw() and Fl_Window::iconlabel() could leak
	  memory if copy_label() was used on the window.
	- fl_shortcut_label() now shows letter shortcuts in
	  uppercase, e.g. "Ctrl+N" instead of "Ctrl+n" to be
	  consistent with other toolkits.
	- FLUID now provides unlimited undo/redo support.
	- FLUID now provides an option to choose which scheme
	  (default, none, plastic) to display.
	- Fixed scheme background issue with windows in FLUID.
	- In FLUID, new widgets are now created with the ideal
	  size by default, and menu bars are positioned to use
	  the entire width of the window.
	- Added Layout/Widget Size submenu to select default
	  label and text size (Tiny, Small, and Normal).
	- Added Edit/Duplicate command to FLUID to duplicate the
	  current selection.
	- FLUID now tracks the current state of the widget bin
	  and overlays.
	- Now fill the widget image paths with relative
	  filenames.
	- Fixed frame drawing of Fl_Text_Display (STR #762)
	- Fl_Clock_Output::value() did not return the previously
	  set value (STR #748)
	- Added comment type to FLUID. This is useful for
	  generating copyright notices in the source and header
	  files.
	- Fl_Valuator would not format text output with decimal 
	  point when the step value was fractional, but above 1.
	- fl_filename_relative() didn't compare drive letters in
	  a case-insensitive way (STR #741)
	- Fixed menu item width calculations with symbols (STR
	  #740)
	- The keyboard shortcut handling code did not handle