@@ -24,6 +24,7 @@
 #
 
 CPPFILES = \
+	CodeEditor.cxx \
 	Fl_Function_Type.cxx \
 	Fl_Group_Type.cxx \
 	Fl_Menu_Type.cxx \
