@@ -2,6 +2,8 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745)
+	- FLUID now highlights code in the widget callback and
+	  code editors.
 	- FLUID now supports printing of windows.
 	- Fixed inactive drawing of border, embossed, and
 	  engraved box types.
